<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher_round"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/label_login_title"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_logo"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_login_item"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_user"/>

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_input_user_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minLines="3"
                android:scrollbars="none"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_delete_number"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:visibility="gone"
                android:src="@mipmap/ic_input_clear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/bg_login_item"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:scrollbars="none"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:visibility="gone"
                android:src="@mipmap/ic_password_hide" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/button_blue"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_register"
                android:layout_marginRight="20dp"
                android:paddingRight="10dp"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>